# PG2_PAARCIALL3

./: .gitignore  README.md  main.py  pyproject.toml  setup.cfg  setup.py
src/core/: persona.py
src/validators/: validators.py
