[metadata]
name = validador_datos_personas
version = 0.0.1
author = Celso Paolo Velasco Espinoza
author_email = celsovelasco.sis24ch@tecba.edu.bo
description = Una librería para validación de datos y manejo de personas.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/CelsoPaolo/PG2_PARCIAL3.git

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    setuptools

[options.packages.find]
where = src